# tiny-append

./: README.md  tiny-append.cabal
src/: Lib.hs
