name:                tiny-append
version:             0.1.0.0
synopsis:            Append and read one file
description:         Please see README.md
homepage:            https://github.com/noelr/tiny-append#readme
license:             BSD3
license-file:        LICENSE
author:              Noel Rohrbach
maintainer:          noel@noelr.ch
copyright:           2016 Noel Rohrbach
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , bytestring
                     , filepath
                     , wai-extra
  default-language:    Haskell2010

executable tiny-append-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tiny-append
  default-language:    Haskell2010

test-suite tiny-append-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tiny-append
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/noelr/tiny-append
